No selection on toolbar, stop drawing correctly when moving mouse out of screen

--- a/common/css/editor.css
+++ b/common/css/editor.css
@@ -80,8 +80,8 @@ html, body {
     opacity: 0.9;
 }
 
-#toolbar {
-    /* rounded corners */
+#toolbar::selection, #toolbar .button::selection {
+    background-color: transparent;
 }
 
 /*Submit dialog*/
